<resources>
    <string name="app_name">Vieruur</string>
    <string name="member_name_hint">Naam</string>
    <string name="group_hint">Groep</string>
    <string name="consumptions_hint">Consumpties (max 99)</string>
    <string name="add_button_text">Toevoegen</string>
    <string name="settings">Instellingen</string>
    <string name="pref_show_username_label">Naam weergeven</string>
    <string name="pref_show_username_key">show_username</string>
    <string name="pref_show_true">Zichtbaar</string>
    <string name="pref_show_false">Onzichtbaar</string>
    <string name="pref_default_username">Chiro Kiewit</string>
    <string name="pref_default_username_key">edit_username</string>
    <string name="pref_default_username_title">Gebruikersnaam</string>
    <string-array name="memberGroups">
        <item>Sloebers</item>
        <item>Speelclub</item>
        <item>Rakkers</item>
        <item>Toppers</item>
        <item>Kerels</item>
        <item>Aspies</item>
    </string-array>
    <string name="search_hint">Query voor Github</string>
    <string name="show_URL">URL zal hier verschijnen</string>
    <string name="search_button_text">Haal laatste drankprijzen op</string>
    <string name="search_results">Zoek en resultaat komt hier</string>
    <string name="error_message">Geen resultaten gevonden, probeer opnieuw.</string>
    <string name="newCard_button_text6">Voeg nieuwe kaart toe (€6)</string>
    <string name="newCard_button_text12">Voeg nieuwe kaart toe (€12)</string>
    <string name="group1">sloebers</string>
    <string name="group2">speelclub</string>
    <string name="group3">rakkers</string>
    <string name="group4">toppers</string>
    <string name="group5">kerels</string>
    <string name="group6">aspi\'s</string>
    <string name="leaderButtonMain">leiding</string>
    <string name="searchButtonMain">zoeken</string>
    <string name="memberButtonMain">leden</string>
</resources>
